[package]
name = "safehaven"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "migrate",
    "uuid",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_with = "3.8"
rand = "0.8.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
scrypt = "0.11"
time = "0.3.36"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
cookie = "0.18.1"
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tokio = { version = "1.36", features = ["full"] }
figment = { version = "0.10", features = ["toml", "env"] }
jsonwebtoken = "9"
tracing = "0.1"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "chrono"] }
clap = { version = "4", features = ["derive"] }
clap_derive = { version = "4" }
number_range = "0.3.2"
crc32fast = "1.4.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tiny-skia = { version = "0.11.4", features = ["png-format"] }
resvg = "0.42.0"